--- a/data-engineer.html
+++ b/data-engineer.html
@@ -48,7 +48,7 @@
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/streetlightdata/4677d0dc-2a81-45b4-9815-72b4d33d9432'>StreetLight Data - Senior Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -74,7 +74,7 @@ online content network for information and online operations of CBS Corporation
 <p><span class="badge badge-light">San Francisco California</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://solvay.avature.net/careers/JobDetail/2019-07-19/9500'>VIE - R&I data engineer - Chemoinformatics | Solvay</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... This position is in Solvay Research & Innovation Centre Brussels, in the recently 
 created Data Management Excellence Team. Within this multidisciplinary team?...</p>
@@ -142,7 +142,7 @@ and adapt?...</p>
 Engineering. Full-Time. Submit your application. LinkedIn profile. Loading. Apply 
 with?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/xfers/e47a2d36-c5a2-4bfe-9b16-e63ee0fa2911'>Xfers - Data Engineer - Taiwan Taipei</a></h5> 
+<h5><a href='https://jobs.lever.co/xfers/e47a2d36-c5a2-4bfe-9b16-e63ee0fa2911'>Xfers - Data Engineer - Taiwan Taipei</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Data Engineer - Taiwan Taipei. Taipei. Software Engineers. Full Time. Apply for 
 this job. In Xfers, you'll likely get experience on many different projects across?...</p>
@@ -169,7 +169,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">Sydney Sydney Sydney Sydney Sydney</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/nextgenamerica/jobs/1791548'>Job Application for Data Engineer  at NextGen America</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -202,7 +202,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/linuxacademy/9b3b415d-d6ee-4e4c-b32b-48192095da3a'>Linux Academy - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -220,7 +220,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Campbell California</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/infoblox/job/o4Wjafwd'>Infoblox Careers - Data Engineer</a></h5> 
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -288,7 +288,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Stockholm Stockholm Stockholm London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://itecor.workable.com/j/D433253227'>Itecor - Jobs: Data Engineer Specialist - Apply online</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -318,7 +318,7 @@ The hire will be responsible for expanding and optimizing our Operations data?..
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light">Arlington</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -359,7 +359,7 @@ online content network for information and online operations of CBS Corporation
 <p>Jul 7, 2019 ... Strong 8+ years of industry experience. 2. 4-8 years of strong experience in 
 working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/vividseats/job/o9gBafwU'> Vivid Seats Careers - Data Engineering Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/vividseats/job/o9gBafwU'> Vivid Seats Careers - Data Engineering Manager</a></h5> 
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
